--- a/Reynolds_Currie_2024_transit_supply_index_GTFS.Rmd
+++ b/Reynolds_Currie_2024_transit_supply_index_GTFS.Rmd
@@ -52,20 +52,10 @@ library(dplyr)
 ```
 
 # Introduction
-Transit service level indicators include those in the Transit Capacity and Quality of Service Manual (TCQSM) [@TCQSM:2013], the Transit Score metric [@WalkScore:2023tg] and many more. Practitioners, researchers and advocates seeking to use such metrics may face two inter-related challenges: firstly, there is the problem of calculating the metrics themselves for a specific location and service pattern; secondly, is the challenge of explaining the metrics, their meaning and importance those who are not specialists in transit^[For example, politicians, other decision-makers or the general public.]. 
 
-The TCQSM specifies Levels of Service (LOS) between A and F across a range of factors^[Including service span, frequency, speed, the proportion of the population serviced, competitiveness of travel times to car-based travel, and many more.]. This scoring scheme appears relatively simple to explain^[A is good and F is bad. Also this scoring system matches to the A to F LOS scoring used in many traffic capacity analysis software and manuals.], and the detail within @TCQSM:2013 provides a resource for anyone wanting to better understand what the scores mean. However, calculation of many of TCQSM metrics may need specialised software and datasets^[For example, the Service Coverage Area metric in the TCQSM (pp. 5-8 to 5-21) may require GIS or other analysis, on top of accurate data about population densities, stop locations and service schedules.] and it might be challenging to explain the detail of these measures or how to improve them to non-technical decision-makers, stakeholders or others involved in transit management or advocacy. The introduction of the General Transit Feed Specification (GTFS)^[ GTFS is an open, text-based format that was developed originally to allow transit information to be included in the Google Maps navigation platform [@GTFS].] [@GTFS] and widespread release of schedule data in this format, however, has helped towards making transit metrics more broadly availabile. @Wong:2013aa provides an example, having developed code to calculate of some of the TCQSM metrics^[@Wong:2013aa calculated daily average headways, route length and stop numbers for 50 transit operators.] directly from GTFS feed data. GTFS data also underlies many online journey planning systems^[Notably Google Maps, from back when it was called the Google Transit Feed Specification.], and Transit Score, which scores locations out of 100 for transit service levels [@WalkScore:2023tg]^[100 representing the highest levels of transit service provision, and being roughly equivalent to what might be experienced in the centre of New York; but which was actually calibrated using scores for the centre of San Francisco, Chicago, Boston, Portland, and Washington, D.C. [@WalkScore:2023tg]]. However, the TransitScore algorithm is patented and effectively a black box, meaning that it is not possible to calculate scores independently or understand how the metric might change with alteration to the transit system or services, or the surrounding environment. TransitScore, therefore fails the first of the aforementioned challenges; in that practitioners, researchers and advocates can only use those scores provided by @WalkScore:2023tg, rather than being able to calculate scores independently. 
+Previous research by @currie2007identifying developed a transit Supply Index (SI), based on calculating the number of transit arrivals at stops within an area of interest, adjusted to account for the typical walk-access catchment for each stop. This documents reports the development of R code to calculate the Supply Index of @currie2007identifying directly from GTFS data. The code is used to output SI scores for the day of the 2016 census and the day of the 2021 census for each of the Australian Bureau of Statistics (ABS) 2016 Statistical Area Level 1 (SA1) zones in Victoria.
 
-Previous research by @currie2007identifying developed a transit Supply Index (SI) that is relatively easy to calculate and understand, and which is open^[Rather than a black box, closed-source or otherwise secret algorithm.]. This Index is based on calculating the number of transit arrivals at stops within an area of interest, adjusted to account for the typical walk-access catchment for each stop.  Unfortunately, the index does not appear to have been widely used, perhaps in part because it still required an analyst to obtain timetable and geographic data and undertake the calculation themselves. Since the publication of @currie2007identifying, however, such data has become much easier to obtain with more than 10,000 agencies now providing GTFS data [@GTFS]. A gap, however, is that there is not yet a method for calculating the @currie2007identifying SI directly from GTFS data. 
-
-This paper reports the development of R code to calculate the Supply Index of @currie2007identifying directly from GTFS data. The code is developed using data from a single case: the GTFS for Victoria in Australia, which includes Greater Melbourne. 
-
-<!--Cross-case comparisons to Toronto, Canada, and Washington DC, USA, are also undertaken to test the results and gain understanding of how the Supply Index might be useful for practitioners, researchers and advocates. -->
-
-The motivation for this research is to better understand how GTFS data might be used to produce benchmarking metrics that can be calculated using open-source code. Such metrics might then be able to be used to access proposed network changes without the need for specialist software or analysis.  A related objective is to increase the availability of metrics that are relatively easy to understand and use when making decisions about or advocating for changes to existing services, including for those who may not be technical specialists in transit planning and scheduling. 
-
-This rest of this document is structured as follows: the next section discusses the research context of transit metrics and the the Supply Index. The Transport Needs Index used in @currie2007identifying^[Being the other part of a needs-gap assessment.] is also briefly discussed.  In the third section the methodology for the code development is outlined, including discussion of the case study GTFS for Victoria, Australia, that was used to test and verify the code output. This includes presentation and mapping of the Australian Bureau of Statistics (ABS) Index of Relative Socio-economic Advantage and Disadvantage (IRSAD) scores from the 2016 and 2021 censuses, which are used later in the paper to explore the needs-gaps for Victorian Local Government Areas (LGAs). 
-In the fourth section results are presented,  starting with verification of the code output through hand-calculation of SI scores for Statistical Area 1 (SA1) areas in the Victorian Alps and Talbot. SI scores for LGAs across Greater Melbourne and Victoria are also presented, comparing transit service levels on the day of the census in 2016 with those on the day of the census in 2021. Mode-by-mode SI scores are also explored, followed by an examination of needs-gaps across the IRSAD scores, ranks and population levels.  The document then closes with a brief discussion and conclusion section. 
+This rest of this document is structured as follows: the next section discusses the research context of transit metrics and the the Supply Index. In the third section the methodology for the code development is outlined, including discussion of the case study GTFS for Victoria, Australia, that was used to test and verify the code output. In the fourth section results are presented,  starting with verification of the code output through hand-calculation of SI scores for Statistical Area 1 (SA1) areas in the Victorian Alps and Talbot. SI scores for SA1s across Greater Melbourne and Victoria are also presented. Mode-by-mode SI scores are also explored, followed by an examination of needs-gaps across the ABS Index for Relative Socio-Economic Advantage/Disadvantage (IRSAD) scores, ranks and population levels.  The document then closes with a brief discussion and conclusion section. 
 
 # Research context
 Even a brief search shows that there is a very large number of metrics available for benchmarking transit services^[For example: the Transit Cooperative Research Program (TCRP) Report 88 provides an extensive guidebook on developing a performance-measurement system [@Ryus:2003aa]; online databases are provided by the Florida Transit Information System (FTIS) [@Florida-Transit-Information-System:2018aa] and the International Association of Public Transport (UITP) [@UITP:2015aa]; while the Transport Strategy Centre of Imperial College London runs extensive annual benchmarking programmes across over 100 transit provides around the world [@Imperial-College-London:2023aa].].The Fielding Triangle [@FieldingGordonJ1987Mpts] provides a framework for understanding how such metrics combine service inputs, service outputs and service consumption to describe cost efficiency, cost effectiveness or service effectiveness measures. At a larger scale, @Litman:2003ab and @Litman:2016aa discuss some of the traffic, mobility, accessibility, social equity, strategic planning and other rational decision-making frames that might underlie such transit metrics, while @Reynolds:2017ah extends this into models of how institutionalism, incrementalism and other public policy models might apply to decision-making processes. Further examples are provided by @GuzmanLuisA.2017Aeit, who develop a measure of accessibility in the context of policy development and social equity for Latin American Bus Rapid Transit (BRT) based networks,  and the street space allocation metrics based around 10 ethical principles introduced by @Creutzig2020streetspaceallocation. 
@@ -98,11 +88,8 @@ Later in this document a similar needs-gap analysis is presented for Victorian L
 # Methodology
 This study adopts a case research approach by developing code to calculate Supply Indexes for Greater Melbourne and Victoria, Australia
 
-<!---^[A key issue in case-based research is the duality criterion, being the need to simultaneously: be engaged with depth of the individual cases included in the study; yet also be seeking findings that are generalisable to more than just the case that are studied. This study responds to this criterion by first testing the developed code across three different transit systems, which is expected to be sufficient to validate that it is generalisable to most GTFS feeds, not specific to the quirks of the Victorian GTFS feed. Additionally, this study engages with a range of issues (level-boarding access, new routes and services, and cancelled projects) across these three cities, again seeking to demonstrate how the Supply Index code might be adapted to a range of other issues and places.].  
--->
-
 ## Code development
-This document has been prepared using Rmarkdown, which allows the intermingling of written text, code segments and code outputs. Code segements developed in this research are shown in the following, together with the relevant descriptive text^[The Rmarkdown file is available at https://github.com/James-Reynolds/Transit_Supply_Index_GTFS and this can be read in a plain-text editor to view the code snippets themselves. If you are reading this in a PDF document you are seeing just the descriptive text, and outputs from the code where it has been run to produce maps, charts etc.]
+This document has been prepared using Rmarkdown, which allows the intermingling of written text, code segments and code outputs. Code segments developed in this research are shown in the following, together with the relevant descriptive text^[The Rmarkdown file is available at https://github.com/James-Reynolds/Transit_Supply_Index_GTFS/tree/SA12016_analysis and this can be read in a plain-text editor to view the code snippets themselves. If you are reading this in a PDF document you are seeing just the descriptive text, and outputs from the code where it has been run to produce maps, charts etc.]. This specific document is part of a branch of the developed code, specifically created for reporting the calculation of the SI scores for the SA12016 zones. 
 
 Various analysis tools are available that make use of GTFS data, including the tidytransit package [@R-tidytransit] for the R statistical programming language [@R-base]. @tidytransit_departure_timetable provides code to calculate a departure timetable from a GTFS feed, and this was adapted to calculate arrivals at a stop and the SL~Bn~ term in the @currie2007identifying SI equation. 
 
@@ -500,9 +487,9 @@ Victoria is the southern-most state on the Australian mainland. The state capita
 
 There are train and tram networks radiating from the CBD, but for most of the suburban areas the reality is that transit is provided by circuitious bus routes that are mostly used by those who cannot otherwise drive. An extensive freeway (and tollway) network provides connections across the Greater Melbourne area, further around Port Phillip Bay to Geelong (south-west) and the Mornington Penninsula (south-east) as well as to regional centres elsewhere in Victoria. There is a state-wide regional train and bus network (VLine), which also provides connections into South Australia, New South Wales and the Australian Capital Territory (Canberra) and local bus services in many regional towns and cities. However, accessibility to most of the city and state tends to be car-dominated. The Overland train service to Adelaide and the XPT to Sydney are provided seperately to VLine services.  Victoria's GTFS feed is published by Public Transport Victoria (PTV)^[There are over 400 historical releases of the  available on the transitfeeds.com website, with the first dating from March 2015 [@transitfeeds_victoria:2023aa].]. 
 
-The developed code was tested for both SA1- and LGA-level areas of interest. Output was obtained for SA1-level areas using a GTFS file from late April, 2023, running for a full 7-day period.  For the LGA-level output the results were compared between 2016 and 2021, to match the Australian census dates. The Australian census is undertaken in early August every 5 years. GTFS feeds were therefore selected for the first week of August of each year, with code output produced for only the day of the census itself^[It takes about a day of processing time to run the code for all of the stops in Vicotira for a single 'day' of service. Hence, only the census days (rather than weeks) were analysed to speed development.]. Minor corrections were made to the GTFS files to remove duplicate stop_ids^[These involved minor discrepancies in either the stop name, latitude or longitude.]. 
+The developed code was tested for both SA1- and LGA-level areas of interest^[This testing is reported in the main branch of the project on GitHub. This document is instead specific to the calculation of the SA1 scores for the 2016 SA1 boundaries.]. Output was obtained for SA1-level areas using GTFS files from August 2016 and 2021, running for just the day of the census in each year.  The Australian census is undertaken in early August every 5 years. GTFS feeds were therefore selected for the first week of August of each year, with code output produced for only the day of the census itself^[It takes about a day of processing time to run the code for all of the stops in Vicotira for a single 'day' of service. Hence, only the census days (rather than weeks) were analysed to speed development.]. Minor corrections were made to the GTFS files to remove duplicate stop_ids^[These involved minor discrepancies in either the stop name, latitude or longitude.]. 
 
-The Australian Bureau of Statistics (ABS) provides a range of shape files and other resources. This study made use of the absmapsdata R package [@R-absmapsdata] to access the 2021 Local Government Area (LGA) boundaries for the Greater Melbourne area.  The EPSG:28355 transform [@EPSG_28355] was used to shift longitude and latitude into metres, as per the Geocentric Datum of Australia 1994 (GDA95 / MGA zone 55) coordinates. 
+The Australian Bureau of Statistics (ABS) provides a range of shape files and other resources. This study made use of the absmapsdata R package [@R-absmapsdata] to access the 2016 SA1 boundaries for Victoria.  The EPSG:28355 transform [@EPSG_28355] was used to shift longitude and latitude into metres, as per the Geocentric Datum of Australia 1994 (GDA95 / MGA zone 55) coordinates. 
 
 
 
@@ -571,7 +558,8 @@ units(p$area) <- as_units("m^2")
 
 
 #load pre-calculated df by mode (for just one day)
-victoria_2021_SI_df_by_mode <- read.csv("~/Documents/0001_project/Transit_Supply_Index_GTFS/results/Victoria_2021_SI_df_by_mode_SA12016_210810.csv")
+victoria_2021_SI_df_by_mode <- read_delim("results/Victoria_2021_SI_df_by_mode_SA12016_210810.csv", 
+    delim = ";", escape_double = FALSE, trim_ws = TRUE)
 victoria_2021_SI_df_by_mode$sa1_code_2016 <- as.character(victoria_2021_SI_df_by_mode$sa1_code_2016)
 
 
@@ -616,8 +604,8 @@ victoria_2021_SI_df_by_mode_sf <- left_join(victoria_2021_SI_df_by_mode, sa12016
 
 
 #load pre-calculated df by mode (for just one day)
-victoria_2016_SI_df_by_mode <- read.csv("~/Documents/0001_project/Transit_Supply_Index_GTFS/results/Victoria_2016_SI_df_by_mode_SA12016_160809.csv")
-
+victoria_2016_SI_df_by_mode <- read_delim("results/Victoria_2016_SI_df_by_mode_SA12016_160809.csv" 
+    delim = ";", escape_double = FALSE, trim_ws = TRUE)
 #Id code to characters
 victoria_2016_SI_df_by_mode$sa1_code_2016 <- as.character(victoria_2016_SI_df_by_mode$sa1_code_2016)
 
@@ -628,21 +616,33 @@ victoria_2016_SI_df_by_mode_sf <- left_join(victoria_2016_SI_df_by_mode, sa12016
 
 The ABS provides IRSAD datasets for LGAs in excel format. Data for 2016 and 2021 was included in this study. Scores are shown in Figures \ref{fig:Victoria_IRSAD_load_2016} and \ref{fig:Victoria_IRSAD_load_2021}. Figure \ref{fig:Victoria_IRSAD_compare} shows changes in IRSAD scores between 2016 and 2021. 
 
-```{r Victoria_IRSAD_load_2016, echo=FALSE, warning=FALSE, message=FALSE, fig.fullwidth = TRUE, fig.cap= "2016 IRSAD for Victorian and Greater Melbourne LGAs", fig.show="hold", out.width="50%"}
+```{r Victoria_IRSAD_load_2016, echo=FALSE, warning=FALSE, message=FALSE, fig.fullwidth = TRUE, fig.cap= "2016 IRSAD for SA1s within the Clayton SA2 boundary: score (left) and percentile within Victoria (right)", fig.show="hold", out.width="50%"}
 
 
-IRSAD_2016_lga <- read_excel("data/Melbourne/ABS/2033055001 - lga indexes.xls", 
-    sheet = "Table 3", skip = 5)
-names(IRSAD_2016_lga) <- c("lga_code_2016", "lga_name_2016", "usual_resident_population", "IRSAD_score","blank", "Australian_rank", "Australian_decile", "Australian_percentile", "blank2", "state_for_rank", "state_rank", "state_decile", "state_percentile", "IRSAD_score_lowest_SA1", "IRSAD_score_highest_SA1", "percent_usual_resident_population_no_SA1_score")
-IRSAD_2016_lga <- tibble(IRSAD_2016_lga)
+IRSAD_2016_sa12016 <- read_excel("data/Melbourne/2016/2033055001 - sa1 indexes.xls", 
+    sheet = "Table 3", skip = 4)
 
-IRSAD_2016_lga_map <- left_join(IRSAD_2016_lga, LGA_map_data, join_by("lga_code_2016" == "lga_code_2021"))
+#Rename variables, remove rows that do not have data, change variable type to match
+names(IRSAD_2016_sa12016) <- c("sa1_code_2016", "sa1_code_2016_11_digit", "usual_resident_population", "IRSAD_score","blank", "Australian_rank", "Australian_decile", "Australian_percentile", "blank2", "state_for_rank", "state_rank", "state_decile", "state_percentile")
+IRSAD_2016_sa12016 <- tibble(IRSAD_2016_sa12016)
+IRSAD_2016_sa12016 <- IRSAD_2016_sa12016[-1,]
+IRSAD_2016_sa12016 <- head(IRSAD_2016_sa12016, -2)
+
+IRSAD_2016_sa12016$sa1_code_2016 <- as.character(IRSAD_2016_sa12016$sa1_code_2016)
+IRSAD_2016_sa12016$sa1_code_2016_11_digit <- as.character(IRSAD_2016_sa12016$sa1_code_2016_11_digit)
+IRSAD_2016_sa12016$IRSAD_score <- as.numeric(IRSAD_2016_sa12016$IRSAD_score)
+IRSAD_2016_sa12016$Australian_rank <- as.numeric(IRSAD_2016_sa12016$Australian_rank)
+IRSAD_2016_sa12016$Australian_decile <- as.numeric(IRSAD_2016_sa12016$Australian_decile)
+IRSAD_2016_sa12016$Australian_percentile <- as.numeric(IRSAD_2016_sa12016$Australian_percentile)
+IRSAD_2016_sa12016$state_rank <- as.numeric(IRSAD_2016_sa12016$state_rank)
+IRSAD_2016_sa12016$state_decile <- as.numeric(IRSAD_2016_sa12016$state_decile)
+IRSAD_2016_sa12016$state_percentile <- as.numeric(IRSAD_2016_sa12016$state_percentile)
+
+IRSAD_2016_sa12016_map <- left_join(IRSAD_2016_sa12016, sa1_map_data, join_by("sa1_code_2016" == "sa1_7dig_2016"))
 
 
-
-
-map <- IRSAD_2016_lga_map %>%
-  filter(state_name_2021 == "Victoria") %>%   
+map <- IRSAD_2016_sa12016_map %>%
+  filter(sa2_name_2016 == "Clayton") %>%   
   ggplot() +
   geom_sf(aes(geometry = geometry,  # use the geometry variable
              fill = IRSAD_score),     # fill by IRSAD_score
@@ -657,16 +657,13 @@ map <- IRSAD_2016_lga_map %>%
 map
 
 
-
-map <- IRSAD_2016_lga_map %>%
-  filter(state_name_2021 == "Victoria") %>%   
-  filter(greater_melbourne == "Greater Melbourne") %>%
+map <- IRSAD_2016_sa12016_map %>%
+  filter(sa2_name_2016 == "Clayton") %>%   
   ggplot() +
   geom_sf(aes(geometry = geometry,  # use the geometry variable
-             fill = IRSAD_score),     # fill by TOtal SI
+             fill = state_percentile),     # fill by IRSAD_score
           lwd = 0,                  # remove borders
-         show.legend = TRUE) +   # keep legend
-  # fill colours on log scale
+         show.legend = TRUE) +   # fill colours on log scale
 # geom_point(aes(cent_long,
     #           cent_lat),        # use the centroid long (x) and lats (y)
    #          colour = "white") +    # make the points white
@@ -674,28 +671,51 @@ map <- IRSAD_2016_lga_map %>%
  coord_sf()
 
 map
+
 
 ```
 
 
 
 
-```{r Victoria_IRSAD_load_2021, echo=FALSE, warning=FALSE, message=FALSE, fig.fullwidth = TRUE, fig.cap= "2021 IRSAD for Victorian and Greater Melbourne LGAs", fig.show="hold", out.width="50%"}
+```{r Victoria_IRSAD_load_2021, echo=FALSE, warning=FALSE, message=FALSE, fig.fullwidth = TRUE, fig.cap= "2021 IRSAD for SA1s within the Clayton SA2 boundary: score (left) and percentile within Victoria (right)", fig.show="hold", out.width="50%"}
 
 
 
-IRSAD_2021_lga <- read_excel("data/Melbourne/ABS/Local Government Area, Indexes, SEIFA 2021.xlsx", 
-    sheet = "Table 3", skip = 5)
+IRSAD_2021_sa12021 <- read_excel("data/Melbourne/2021/Statistical Area Level 1, Indexes, SEIFA 2021.xlsx", 
+    sheet = "Table 3", skip = 4)
 
-names(IRSAD_2021_lga) <- c("lga_code_2021", "lga_name_2021", "usual_resident_population", "IRSAD_score","blank", "Australian_rank", "Australian_decile", "Australian_percentile", "blank2", "state_for_rank", "state_rank", "state_decile", "state_percentile", "IRSAD_score_lowest_SA1", "IRSAD_score_highest_SA1", "percent_usual_resident_population_no_SA1_score")
-IRSAD_2021_lga <- tibble(IRSAD_2021_lga)
+#Rename variables, remove rows that do not have data, change variable type to match
+names(IRSAD_2021_sa12021) <- c("sa1_code_2021_11_digit", "usual_resident_population", "IRSAD_score","blank", "Australian_rank", "Australian_decile", "Australian_percentile", "blank2", "state_for_rank", "state_rank", "state_decile", "state_percentile")
+IRSAD_2021_sa12021 <- tibble(IRSAD_2021_sa12021)
+IRSAD_2021_sa12021 <- IRSAD_2021_sa12021[-1,]
+IRSAD_2021_sa12021 <- head(IRSAD_2021_sa12021, -3)
 
-IRSAD_2021_lga_map <- left_join(IRSAD_2021_lga, LGA_map_data)
+IRSAD_2021_sa12021$sa1_code_2021_11_digit <- as.character(IRSAD_2021_sa12021$sa1_code_2021_11_digit)
+IRSAD_2021_sa12021$IRSAD_score <- as.numeric(IRSAD_2021_sa12021$IRSAD_score)
+IRSAD_2021_sa12021$Australian_rank <- as.numeric(IRSAD_2021_sa12021$Australian_rank)
+IRSAD_2021_sa12021$Australian_decile <- as.numeric(IRSAD_2021_sa12021$Australian_decile)
+IRSAD_2021_sa12021$Australian_percentile <- as.numeric(IRSAD_2021_sa12021$Australian_percentile)
+IRSAD_2021_sa12021$state_rank <- as.numeric(IRSAD_2021_sa12021$state_rank)
+IRSAD_2021_sa12021$state_decile <- as.numeric(IRSAD_2021_sa12021$state_decile)
+IRSAD_2021_sa12021$state_percentile <- as.numeric(IRSAD_2021_sa12021$state_percentile)
+
+#Use correspondence file to convert from SA12021 to SA12016
+CG_SA1_2016_SA1_2021 <- read_csv("data/Melbourne/2021/CG_SA1_2016_SA1_2021.csv")
+CG_SA1_2016_SA1_2021$SA1_MAINCODE_2016 <- as.character(CG_SA1_2016_SA1_2021$SA1_MAINCODE_2016)
+CG_SA1_2016_SA1_2021$SA1_CODE_2021 <- as.character(CG_SA1_2016_SA1_2021$SA1_CODE_2021)
+IRSAD_2021_sa12016 <- IRSAD_2021_sa12021
+IRSAD_2021_sa12021 <- left_join(IRSAD_2021_sa12021, CG_SA1_2016_SA1_2021, join_by("sa1_code_2021_11_digit" == "SA1_CODE_2021"), multiple = "first")
+IRSAD_2021_sa12016$IRSAD_score <- IRSAD_2021_sa12021$IRSAD_score / IRSAD_2021_sa12021$RATIO_FROM_TO
+IRSAD_2021_sa12016$sa1_code_2016 <- IRSAD_2021_sa12021$SA1_MAINCODE_2016
+names(IRSAD_2021_sa12016) <- c("sa1_code_2021_11_digit", "usual_resident_population", "IRSAD_score","blank", "Australian_rank", "Australian_decile", "Australian_percentile", "blank2", "state_for_rank", "state_rank", "state_decile", "state_percentile", "sa1_code_2016_11_digit")
 
 
+IRSAD_2021_sa12016_map <- left_join(IRSAD_2021_sa12016, sa1_map_data, join_by("sa1_code_2016_11_digit" == "sa1_code_2016"))
+names(IRSAD_2021_sa12016_map)[names(IRSAD_2021_sa12016_map) == 'sa1_7dig_2016'] <- 'sa1_code_2016'
 
-map <- IRSAD_2021_lga_map %>%
-  filter(state_name_2021 == "Victoria") %>%   
+map <- IRSAD_2021_sa12016_map %>%
+  filter(sa2_name_2016 == "Clayton") %>%   
   ggplot() +
   geom_sf(aes(geometry = geometry,  # use the geometry variable
              fill = IRSAD_score),     # fill by IRSAD_score
@@ -710,16 +730,13 @@ map <- IRSAD_2021_lga_map %>%
 map
 
 
-
-map <- IRSAD_2021_lga_map %>%
-  filter(state_name_2021 == "Victoria") %>%   
-  filter(greater_melbourne == "Greater Melbourne") %>%
+map <- IRSAD_2021_sa12016_map %>%
+  filter(sa2_name_2016 == "Clayton") %>%   
   ggplot() +
   geom_sf(aes(geometry = geometry,  # use the geometry variable
-             fill = IRSAD_score),     # fill by TOtal SI
+             fill = state_percentile),     # fill by IRSAD_score
           lwd = 0,                  # remove borders
-         show.legend = TRUE) +   # keep legend
-  # fill colours on log scale
+         show.legend = TRUE) +   # fill colours on log scale
 # geom_point(aes(cent_long,
     #           cent_lat),        # use the centroid long (x) and lats (y)
    #          colour = "white") +    # make the points white
